...
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing">

        <TextView
            android:id="@+id/brick_glide_to_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_glide">
        </TextView>

        <TextView
            android:id="@+id/brick_glide_to_edit_text_duration"
            style="@style/BrickEditText"
            android:layout_width="match_parent"
...
        <TextView
            android:id="@+id/brick_glide_to_seconds_text_view"
            style="@style/BrickText.SingleLine">
        </TextView>

        <TextView
            android:id="@+id/brick_glide_to_x"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_glide_to_x"
            app:layout_newLine="true">
        </TextView>

        <TextView
...
