...
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:longClickable="true"
	>
		<TextView
			android:id="@+id/ValueTextView"
			android:text="@string/brick_play_sound"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:textColor="@color/white"
			android:textSize="18dip"
...
