...
        <TextView
            android:id="@+id/brick_set_x_prototype_text_view"
            style="@style/BrickPrototypeTextView" >
        </TextView >

        <TextView
            android:id="@+id/brick_set_x_edit_text"
            style="@style/BrickEditText"
            app:layout_inputType="number"
            app:layout_textField="true" >
        </TextView >
    </org.catrobat.catroid.ui.BrickLayout >

...
